--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "server.js",
   "dependencies": {
     "express": "^4.19.2",
-    "express-gateway": "^1.16.11"
+    "express-gateway": "^1.16.11",
+    "sqlite3": "^5.1.7"
   }
 }
